.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Trail_Component__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__ParentOrg__c</fullName>
        <label>ParentOrg</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Audit Trail</relationshipLabel>
        <relationshipName>Trail_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Trail Components</relationshipLabel>
        <relationshipName>Trail_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Reconciled__c</fullName>
        <label>Reconciled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trail Component</label>
    <nameField>
        <displayFormat>TC-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Trail Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trail Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>